# page_loader

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  app_logger.py  download_content.py  downloader.py
page_loader/scripts/: main.py
page_loader/tmp/: page-loader-hexlet-repl.html
tests/: test_downloader.py
tests/fixtures/: test_file_link.css  test_file_script.js  test_file_to_download.html
